This should fix Java 11 support