@@ -9,13 +9,13 @@ package com.dbsoftwares.votesender.utils;
 import net.md_5.bungee.api.ChatColor;
 
 import javax.crypto.Cipher;
-import javax.xml.bind.DatatypeConverter;
 import java.security.KeyFactory;
 import java.security.NoSuchAlgorithmException;
 import java.security.PrivateKey;
 import java.security.PublicKey;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 
 public class Utilities {
 
@@ -25,9 +25,10 @@ public class Utilities {
 
     public static PublicKey getPublicKey(String key) {
         try {
-            byte[] base64Binary = DatatypeConverter.parseBase64Binary(key);
-            KeyFactory keyFactory = KeyFactory.getInstance("RSA");
-            X509EncodedKeySpec keySpec = new X509EncodedKeySpec(base64Binary);
+            final byte[] base64Binary = Base64.getDecoder().decode(key);
+            final KeyFactory keyFactory = KeyFactory.getInstance("RSA");
+            final X509EncodedKeySpec keySpec = new X509EncodedKeySpec(base64Binary);
+
             return keyFactory.generatePublic(keySpec);
         } catch (NoSuchAlgorithmException | InvalidKeySpecException e) {
             e.printStackTrace();
@@ -36,13 +37,13 @@ public class Utilities {
     }
 
     public static byte[] encrypt(byte[] data, PublicKey key) throws Exception {
-        Cipher cipher = Cipher.getInstance("RSA");
+        final Cipher cipher = Cipher.getInstance("RSA");
         cipher.init(1, key);
         return cipher.doFinal(data);
     }
 
     public static byte[] decrypt(byte[] data, PrivateKey key) throws Exception {
-        Cipher cipher = Cipher.getInstance("RSA");
+        final Cipher cipher = Cipher.getInstance("RSA");
         cipher.init(2, key);
         return cipher.doFinal(data);
     }
